# Algo

./: CMakeLists.txt  README.md
IntroductionToSTL/: CMakeLists.txt  multiset_tutorial.cpp  set_tutorial.cpp
IntroductionToSTL/inputs/: set_tutorial_input_1.in
IntroductionToSTL/outputs/: multiset_tutorial_output_1.out  set_tutorial_output_1.out
SegmentTrees/: CMakeLists.txt  gcd_segment_tree.cpp  xor_segment_tree  xor_segment_tree.cpp
SemgentTrees/: sum_segment_tree_advanced
segment_trees/: gcd_segment_tree  sum_segment_tree_advanced.cpp  task_G_pride_faster.cpp
